Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -593,10 +593,10 @@
   "dn16:3.24.1": "Ānanda, postoji osam načina ovladavanja umom.",
   "dn16:3.24.2": "Kojih osam?",
   "dn16:3.25.1": "Kad neko u sebi opažajući oblike, vidi i spoljašnje oblike, male, lepe ili ružne.",
-  "dn16:3.25.2": "„Ovladavši njima, ja znam, ja vidim.”",
+  "dn16:3.25.2": "I zaključuje ovako: „Ovladavši njima, ja znam, ja vidim.”",
   "dn16:3.25.3": "To je prvi način.",
   "dn16:3.26.1": "Kad neko u sebi opažajući oblike, vidi i spoljašnje oblike, ogromne, lepe ili ružne. I zaključuje ovako:",
-  "dn16:3.26.2": "„Ovladavši njima, ja znam, ja vidim.”",
+  "dn16:3.26.2": "I zaključuje ovako: „Ovladavši njima, ja znam, ja vidim.”",
   "dn16:3.26.3": "To je drugi način.",
   "dn16:3.27.1": "Kad neko ne opažajući oblike u sebi, vidi spoljašnje oblike, male, lepe ili ružne. I zaključuje ovako:",
   "dn16:3.27.2": "„Ovladavši njima, ja znam, ja vidim.”",
@@ -617,5 +617,6 @@
   "dn16:3.31.1": "Kad neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, žute, žute boje, žute spoljašnjosti, žutog sjaja.",
   "dn16:3.31.2": "Baš kao što je bandhuđīvaka cvet crven, crvene boje, crvene spoljašnjosti, crvenog sjaja. Ili kao što je tkanina iz Benaresa sa obe strane crvena, crvene boje, crvene spoljašnjosti, crvenog sjaja.",
   "dn16:3.31.3": "Na isti način neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, crvene, crvene boje, crvene spoljašnjosti, crvenog sjaja.",
-  "dn16:3.31.4": "I zaključuje ovako: „Ovladavši njima, ja znam, ja vidim.”"
+  "dn16:3.31.4": "I zaključuje ovako: „Ovladavši njima, ja znam, ja vidim.”",
+  "dn16:3.31.5": "To je sedmi oblik majstorstva."
 }
