--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -618,5 +618,6 @@
   "dn16:3.31.2": "Baš kao što je bandhuđīvaka cvet crven, crvene boje, crvene spoljašnjosti, crvenog sjaja. Ili kao što je tkanina iz Benaresa sa obe strane crvena, crvene boje, crvene spoljašnjosti, crvenog sjaja.",
   "dn16:3.31.3": "Na isti način neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, crvene, crvene boje, crvene spoljašnjosti, crvenog sjaja.",
   "dn16:3.31.4": "I zaključuje ovako: „Ovladavši njima, ja znam, ja vidim.”",
-  "dn16:3.31.5": "To je sedmi oblik majstorstva."
+  "dn16:3.31.5": "To je sedmi oblik majstorstva.",
+  "dn16:3.32.1": "Kad neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, bele, bele boje, bele spoljašnjosti, belog sjaja."
 }
