Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -624,5 +624,6 @@
   "dn16:3.32.3": "Na isti način neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, crvene, crvene boje, crvene spoljašnjosti, crvenog sjaja.",
   "dn16:3.32.4": "I zaključuje ovako: „Ovladavši njima, ja znam, ja vidim.”",
   "dn16:3.32.5": "To je osmi oblik majstorstva.",
-  "dn16:3.32.6": "To su, Ānanda, osam oblika majstorstva."
+  "dn16:3.32.6": "To su, Ānanda, osam oblika majstorstva.",
+  "dn16:3.33.0": "19. Osam oslobođenja"
 }
