--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -626,5 +626,6 @@
   "dn16:3.32.5": "To je osmi oblik majstorstva.",
   "dn16:3.32.6": "To su, Ānanda, osam oblika majstorstva.",
   "dn16:3.33.0": "19. Osam oslobođenja",
-  "dn16:3.33.1": "Ānanda, postoji osam oslobođenja."
+  "dn16:3.33.1": "Ānanda, postoji osam oslobođenja.",
+  "dn16:3.33.2": "Kojih osam?"
 }
