--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -627,5 +627,6 @@
   "dn16:3.32.6": "To su, Ānanda, osam oblika majstorstva.",
   "dn16:3.33.0": "19. Osam oslobođenja",
   "dn16:3.33.1": "Ānanda, postoji osam oslobođenja.",
-  "dn16:3.33.2": "Kojih osam?"
+  "dn16:3.33.2": "Kojih osam?",
+  "dn16:3.33.3": "Neko ko ima materijalni oblik vidi materijalne oblike."
 }
