--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -629,5 +629,7 @@
   "dn16:3.33.1": "Ānanda, postoji osam oslobođenja.",
   "dn16:3.33.2": "Kojih osam?",
   "dn16:3.33.3": "Neko ko ima materijalni oblik vidi materijalne oblike.",
-  "dn16:3.33.4": "To je prvo oslobođenje."
+  "dn16:3.33.4": "To je prvo oslobođenje.",
+  "dn16:3.33.5": "Neko ko ne opaža materijalne oblik interno, vidi materijalne oblike eksterno.",
+  "dn16:3.33.6": "To je drugo oslobođenje."
 }
