--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -632,5 +632,6 @@
   "dn16:3.33.4": "To je prvo oslobođenje.",
   "dn16:3.33.5": "Neko ko ne opaža materijalne oblik interno, vidi materijalne oblike eksterno.",
   "dn16:3.33.6": "To je drugo oslobođenje.",
-  "dn16:3.33.7": "Neko biva oslobođen zahvaljujući ideji lepoga."
+  "dn16:3.33.7": "Neko biva oslobođen zahvaljujući ideji lepoga.",
+  "dn16:3.33.8": "To je treće oslobođenje."
 }
