Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -633,5 +633,7 @@
   "dn16:3.33.5": "Neko ko ne opaža materijalne oblik interno, vidi materijalne oblike eksterno.",
   "dn16:3.33.6": "To je drugo oslobođenje.",
   "dn16:3.33.7": "Neko biva oslobođen zahvaljujući ideji lepoga.",
-  "dn16:3.33.8": "To je treće oslobođenje."
+  "dn16:3.33.8": "To je treće oslobođenje.",
+  "dn16:3.33.9": "Kroz potpuno nadilaženje opažanjâ materijalnog oblika, prestanka opažanjâ podražaja, neobraćanje pažnje na opažanja raznolikosti i (kontemplirajući) ’Prostor je beskrajan’, neko stiže i boravi u područje beskrajnog prostora.",
+  "dn16:3.33.10": "To je četvrto oslobođenje."
 }
