Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -635,5 +635,6 @@
   "dn16:3.33.7": "Neko biva oslobođen zahvaljujući ideji lepoga.",
   "dn16:3.33.8": "To je treće oslobođenje.",
   "dn16:3.33.9": "Kroz potpuno nadilaženje opažanjâ materijalnog oblika, prestanka opažanjâ podražaja, neobraćanje pažnje na opažanja raznolikosti i (kontemplirajući) ’Prostor je beskrajan’, neko stiže i boravi u područje beskrajnog prostora.",
-  "dn16:3.33.10": "To je četvrto oslobođenje."
+  "dn16:3.33.10": "To je četvrto oslobođenje.",
+  "dn16:3.33.11": "Kroz potpuno nadilaženje područja beskrajnog prostora i (kontemplirajući) ’Svest je beskonačna’, neko stiže i boavi u području beskrajne svesti."
 }
