--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -637,5 +637,7 @@
   "dn16:3.33.9": "Kroz potpuno nadilaženje opažanjâ materijalnog oblika, prestanka opažanjâ podražaja, neobraćanje pažnje na opažanja raznolikosti i (kontemplirajući) ’Prostor je beskrajan’, neko stiže i boravi u područje beskrajnog prostora.",
   "dn16:3.33.10": "To je četvrto oslobođenje.",
   "dn16:3.33.11": "Kroz potpuno nadilaženje područja beskrajnog prostora i (kontemplirajući) ’Svest je beskonačna’, neko stiže i boavi u području beskrajne svesti.",
-  "dn16:3.33.12": "To je peto oslobođenje."
+  "dn16:3.33.12": "To je peto oslobođenje.",
+  "dn16:3.33.13": "Kroz potpuno nadilaženje područja beskonačne svesti i (kontemplirajući) ’Ništa ne postoji’, neko stiže i boravi u području ništavila.",
+  "dn16:3.33.14": "To je šesto oslobođenje."
 }
