Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -640,5 +640,6 @@
   "dn16:3.33.12": "To je peto oslobođenje.",
   "dn16:3.33.13": "Kroz potpuno nadilaženje područja beskonačne svesti i (kontemplirajući) ’Ništa ne postoji’, neko stiže i boravi u području ništavila.",
   "dn16:3.33.14": "To je šesto oslobođenje.",
-  "dn16:3.33.15": "Kroz potpuno nadilaženje područja ništavila, neko stiže i boravi u području ni opažanja ni neopažanja."
+  "dn16:3.33.15": "Kroz potpuno nadilaženje područja ništavila, neko stiže i boravi u području ni opažanja ni neopažanja.",
+  "dn16:3.33.16": "To je sedmo oslobođenje."
 }
