Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -641,5 +641,8 @@
   "dn16:3.33.13": "Kroz potpuno nadilaženje područja beskonačne svesti i (kontemplirajući) ’Ništa ne postoji’, neko stiže i boravi u području ništavila.",
   "dn16:3.33.14": "To je šesto oslobođenje.",
   "dn16:3.33.15": "Kroz potpuno nadilaženje područja ništavila, neko stiže i boravi u području ni opažanja ni neopažanja.",
-  "dn16:3.33.16": "To je sedmo oslobođenje."
+  "dn16:3.33.16": "To je sedmo oslobođenje.",
+  "dn16:3.33.17": "Kroz potpuno nadilaženje područja ni opažanja ni neopažanja, neko stiže i boravi u prestanku opažanja i osećanja.",
+  "dn16:3.33.18": "To je osmo oslobođenje.",
+  "dn16:3.33.19": "To je, Ānanda, osam oslobođenja."
 }
