--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -644,5 +644,6 @@
   "dn16:3.33.16": "To je sedmo oslobođenje.",
   "dn16:3.33.17": "Kroz potpuno nadilaženje područja ni opažanja ni neopažanja, neko stiže i boravi u prestanku opažanja i osećanja.",
   "dn16:3.33.18": "To je osmo oslobođenje.",
-  "dn16:3.33.19": "To je, Ānanda, osam oslobođenja."
+  "dn16:3.33.19": "To je, Ānanda, osam oslobođenja.",
+  "dn16:3.34.1": "Ānanda, jednom sam boravio kraj Uruvela, na obali reke Nerañđāre, kraj banjanovog drveta, ne dugo posle probuđenja."
 }
