--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -646,5 +646,6 @@
   "dn16:3.33.18": "To je osmo oslobođenje.",
   "dn16:3.33.19": "To je, Ānanda, osam oslobođenja.",
   "dn16:3.34.1": "Ānanda, jednom sam boravio kraj Uruvela, na obali reke Nerañđāre, kraj banjanovog drveta, ne dugo posle probuđenja.",
-  "dn16:3.34.2": "A Māra, Zli, dođe do mene i stade sa strane. Stojeći tako, reče mi:"
+  "dn16:3.34.2": "A Māra, Zli, dođe do mene i stade sa strane. Stojeći tako, reče mi:",
+  "dn16:3.34.3": "Neka sada Blaženi uđe u parinibbānu, neka Srećni uđe u parinibbānu. Sada je vreme za parinibbānu Blaženog."
 }
