--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -648,5 +648,6 @@
   "dn16:3.34.1": "Ānanda, jednom sam boravio kraj Uruvela, na obali reke Nerañđāre, kraj banjanovog drveta, ne dugo posle probuđenja.",
   "dn16:3.34.2": "A Māra, Zli, dođe do mene i stade sa strane. Stojeći tako, reče mi:",
   "dn16:3.34.3": "Neka sada Blaženi uđe u parinibbānu, neka Srećni uđe u parinibbānu. Sada je vreme za parinibbānu Blaženog.",
-  "dn16:3.34.4": "Čuvši ga, ovako mu odgovorih:"
+  "dn16:3.34.4": "Čuvši ga, ovako mu odgovorih:",
+  "dn16:3.35.1": "’Zli, neću ući u parinibbānu sve dok moji monasi nisu istinski učenici, ostvarili cilj, obučeni, samopouzdani, učeni, dobro poznaju učenje, vežbaju u skladu sa tim učenjem, zauzeli su ispravan kurs, žive u skladu sa učenjem i pošto su sve to naučili od svoga učitelja, to će i objaviti, propovedati, obznaniti, praktično pokazati, razjasniti, analizirati, učiniti lako razumljivim i – pošto su s dobrim razlogom kritikovali tvrdnje drugih koje su se pojavile – podučavati čudesnu Dhammu.’"
 }
