--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -653,5 +653,7 @@
   "dn16:3.35.2": "’Zli, neću ući u nibbānu sve dok moje monahinje ne postanu plemenite učenice koje su obučene, uvežbane, vešte, učene, znaju Dhammu napamet… Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
   "dn16:3.35.3": "’Zli, neću ući u nibbānu sve dok moji nezaređeni sledbenici ne postanu plemeniti učenici koje su obučeni, uvežbani, vešti, učeni, znaju Dhammu napamet… Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
   "dn16:3.35.4": "’Zli, neću ući u nibbānu sve dok moje nezaređene sledbenice ne postanu plemenite učenice koje su obučene, uvežbane, vešte, učene, znaju Dhammu napamet… Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
-  "dn16:3.35.5": "’Zli, neću ući u nibbānu sve dok ovaj moj svetački život ne bude uspešan, prosperitetan i raširen, dostupan, poznat mnogima, dobro objašnjen božanskim i ljudskim bićima.’"
+  "dn16:3.35.5": "’Zli, neću ući u nibbānu sve dok ovaj moj svetački život ne bude uspešan, prosperitetan i raširen, dostupan, poznat mnogima, dobro objašnjen božanskim i ljudskim bićima.’",
+  "dn16:3.36.1": "A Māra, Zli, dođe do mene i stade sa strane. Stojeći tako, reče mi:",
+  "dn16:3.36.2": "Neka sada Blaženi uđe u parinibbānu, neka Srećni uđe u parinibbānu. Sada je vreme za parinibbānu Blaženog."
 }
