Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -529,11 +529,11 @@
   "dn16:3.8.11": "Blaženi je i ovo rekao:",
   "dn16:3.8.12": "’Zli, neću ući u nibbānu sve dok moje nezaređene sledbenice ne postanu plemenite učenice koje su obučene, uvežbane, vešte, učene, znaju Dhammu napamet… Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
   "dn16:3.8.13": "I evo sada su vaše nezaređene sledbenice upravo takve.",
-  "dn16:3.8.14": "Uđite u nibbānu sada, poštovani gospodine, uđite u nibbānu, Srećni. Sada je vreme za konačno oslobođenje.",
+  "dn16:3.8.14": "Uđite u parinibbānu sada, poštovani gospodine, uđite u parinibbānu, Srećni. Sada je vreme za konačno oslobođenje.",
   "dn16:3.8.15": "Blaženi je takođe ovako rekao:",
   "dn16:3.8.16": "’Zli, neću ući u nibbānu sve dok ovaj moj svetački život ne bude uspešan, prosperitetan i raširen, dostupan, poznat mnogima, dobro objašnjen božanskim i ljudskim bićima.’",
   "dn16:3.8.17": "I evo sada je taj svetački život uspešan, prosperitetan i raširen, dostupan, poznat mnogima, dobro objašnjen božanskim i ljudskim bićima.",
-  "dn16:3.8.18": "Uđite u nibbānu sada, poštovani gospodine, uđite u nibbānu, Srećni. Sada je vreme za konačno oslobođenje.”",
+  "dn16:3.8.18": "Uđite u parinibbānu sada, poštovani gospodine, uđite u parinibbānu, Srećni. Sada je vreme za konačno oslobođenje.”",
   "dn16:3.9.1": "Čuvši to, Blaženi ovako odgovori Māri, Zlom:",
   "dn16:3.9.2": "„Ne brini se, Zli, nije mnogo vremena ostalo do parinibbāne Blaženog.",
   "dn16:3.9.3": "Za tri meseca, računajući od sada, Tathāgata će ući u parinibbānu.”",
