Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -513,7 +513,7 @@
   "dn16:3.6.4": "„Da, poštovani gospodine”, odgovori poštovani Ānanda i ustade sa svog mesta, pokloni se, pa pazeći da mu Blaženi ostane sa desne strane, otide do obližnjeg drveta i sede u njegovo podnožje.",
   "dn16:3.7.0": "14. Mārin zahtev",
   "dn16:3.7.1": "Onda Māra, Zli, ubrzo pošto je poštovani Ānanda otišao, dođe doBlaženog. Kad je stigao, stade sa strane, pa ovako reče Blaženom:",
-  "dn16:3.7.2": "„Poštovani gospodine, neka sada Blaženi uđe u parinibbānu, neka Srećni uđe u parinibbānu. Sada je vreme za parinibbānu Blaženog.",
+  "dn16:3.7.2": "„Uđite u parinibbānu sada, poštovani gospodine, uđite u parinibbānu, Srećni. Sada je vreme za konačno oslobođenje.",
   "dn16:3.7.3": "Naime, Blaženi je ranije ovako rekao:",
   "dn16:3.7.4": "’Zli, neću ući u parinibbānu sve dok moji monasi nisu istinski učenici, ostvarili cilj, obučeni, samopouzdani, učeni, dobro poznaju učenje, vežbaju u skladu sa tim učenjem, zauzeli su ispravan kurs, žive u skladu sa učenjem i pošto su sve to naučili od svoga učitelja, to će i objaviti, propovedati, obznaniti, praktično pokazati, razjasniti, analizirati, učiniti lako razumljivim i – pošto su s dobrim razlogom kritikovali tvrdnje drugih koje su se pojavile – podučavati čudesnu Dhammu.’",
   "dn16:3.8.1": "I evo sada su vaši monasi upravo takvi.",
@@ -525,7 +525,7 @@
   "dn16:3.8.7": "Blaženi je i ovo rekao:",
   "dn16:3.8.8": "’Zli, neću ući u nibbānu sve dok moji nezaređeni sledbenici ne postanu plemeniti učenici koje su obučeni, uvežbani, vešti, učeni, znaju Dhammu napamet… Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
   "dn16:3.8.9": "I evo sada su vaši nezaređeni sledbenici upravo takvi.",
-  "dn16:3.8.10": "Neka sada Blaženi uđe u parinibbānu, neka Srećni uđe u parinibbānu. Sada je vreme za parinibbānu Blaženog.",
+  "dn16:3.8.10": "Uđite u parinibbānu sada, poštovani gospodine, uđite u parinibbānu, Srećni. Sada je vreme za konačno oslobođenje.",
   "dn16:3.8.11": "Blaženi je i ovo rekao:",
   "dn16:3.8.12": "’Zli, neću ući u nibbānu sve dok moje nezaređene sledbenice ne postanu plemenite učenice koje su obučene, uvežbane, vešte, učene, znaju Dhammu napamet… Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
   "dn16:3.8.13": "I evo sada su vaše nezaređene sledbenice upravo takve.",
