--- a/translation/de/sabbamitta/sutta/kn/thig/thig2.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig2.3_translation-de-sabbamitta.json
@@ -3,8 +3,8 @@
   "thig2.3:0.2": "Das Zweierbuch ",
   "thig2.3:0.3": "Sumaṅgalas Mutter ",
   "thig2.3:1.1": "Gut befreit! Gut befreit! ",
-  "thig2.3:1.2": "Wirklich so gut befreit bin ich vom Stoßen des Stößels! ",
-  "thig2.3:1.3": "Mein widerlicher Mann blies sich auf wie ein Pilz, ",
+  "thig2.3:1.2": "Wirklich so gut befreit bin ich vom Stößel! ",
+  "thig2.3:1.3": "Mein schamloser Mann schoss empor wie ein Pilz, ",
   "thig2.3:1.4": "aus meinem Mörser blies Aalgeruch. ",
   "thig2.3:2.1": "Was Gier und Hass betrifft, ",
   "thig2.3:2.2": "so dörre ich sie aus und röste sie. ",
