--- a/translation/de/sabbamitta/sutta/kn/thig/thig2.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig2.3_translation-de-sabbamitta.json
@@ -6,7 +6,7 @@
   "thig2.3:1.2": "Wirklich so gut befreit bin ich vom Stößel! ",
   "thig2.3:1.3": "Mein schamloser Mann schoss empor wie ein Pilz, ",
   "thig2.3:1.4": "mein Mörser roch nach Aal. ",
-  "thig2.3:2.1": "Was Gier und Hass betrifft, ",
+  "thig2.3:2.1": "Gier und Hass zischen und brodeln, ",
   "thig2.3:2.2": "so dörre ich sie aus und röste sie. ",
   "thig2.3:2.3": "Zum Fuß eines Baumes gehe ich ",
   "thig2.3:2.4": "und meditiere glücklich: „Oh welche Seligkeit!“"
