Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -656,5 +656,6 @@
   "dn16:3.35.5": "’Zli, neću ući u nibbānu sve dok ovaj moj svetački život ne bude uspešan, prosperitetan i raširen, dostupan, poznat mnogima, dobro objašnjen božanskim i ljudskim bićima.’",
   "dn16:3.36.1": "A Māra, Zli, dođe do mene i stade sa strane. Stojeći tako, reče mi:",
   "dn16:3.36.2": "Uđite u parinibbānu sada, poštovani gospodine, uđite u parinibbānu, Srećni. Sada je vreme za konačno oslobođenje.",
-  "dn16:3.36.3": "Naime, Blaženi je ranije ovako rekao:"
+  "dn16:3.36.3": "Naime, Blaženi je ranije ovako rekao:",
+  "dn16:3.36.4": "„Zli, neću ući u nibbānu sve dok moji monasi… ne postanu plemeniti učenici…"
 }
