--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -657,5 +657,7 @@
   "dn16:3.36.1": "A Māra, Zli, dođe do mene i stade sa strane. Stojeći tako, reče mi:",
   "dn16:3.36.2": "Uđite u parinibbānu sada, poštovani gospodine, uđite u parinibbānu, Srećni. Sada je vreme za konačno oslobođenje.",
   "dn16:3.36.3": "Naime, Blaženi je ranije ovako rekao:",
-  "dn16:3.36.4": "„Zli, neću ući u nibbānu sve dok moji monasi… ne postanu plemeniti učenici…"
+  "dn16:3.36.4": "„Zli, neću ući u nibbānu sve dok moji monasi… ne postanu plemeniti učenici…",
+  "dn16:3.36.5": "sve dok moje monahinje… ne postanu plemenite učenice…",
+  "dn16:3.36.6": "sve dok moji nezaređeni sledbenici… ne postanu plemeniti učenici…"
 }
