Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -659,5 +659,7 @@
   "dn16:3.36.3": "Naime, Blaženi je ranije ovako rekao:",
   "dn16:3.36.4": "„Zli, neću ući u nibbānu sve dok moji monasi… ne postanu plemeniti učenici…",
   "dn16:3.36.5": "sve dok moje monahinje… ne postanu plemenite učenice…",
-  "dn16:3.36.6": "sve dok moji nezaređeni sledbenici… ne postanu plemeniti učenici…"
+  "dn16:3.36.6": "sve dok moji nezaređeni sledbenici… ne postanu plemeniti učenici…",
+  "dn16:3.36.7": "sve dok moje nezaređene sledbenice… ne postanu plemenite učenice…",
+  "dn16:3.36.8": "sve dok ovaj moj svetački život ne bude uspešan, prosperitetan i raširen, dostupan, poznat mnogima, dobro objašnjen božanskim i ljudskim bićima.”"
 }
