--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -661,5 +661,7 @@
   "dn16:3.36.5": "sve dok moje monahinje… ne postanu plemenite učenice…",
   "dn16:3.36.6": "sve dok moji nezaređeni sledbenici… ne postanu plemeniti učenici…",
   "dn16:3.36.7": "sve dok moje nezaređene sledbenice… ne postanu plemenite učenice…",
-  "dn16:3.36.8": "sve dok ovaj moj svetački život ne bude uspešan, prosperitetan i raširen, dostupan, poznat mnogima, dobro objašnjen božanskim i ljudskim bićima.”"
+  "dn16:3.36.8": "sve dok ovaj moj svetački život ne bude uspešan, prosperitetan i raširen, dostupan, poznat mnogima, dobro objašnjen božanskim i ljudskim bićima.”",
+  "dn16:3.36.9": "I evo sada je taj svetački život uspešan, prosperitetan i raširen, dostupan, poznat mnogima, dobro objašnjen božanskim i ljudskim bićima.",
+  "dn16:3.36.10": "Uđite u parinibbānu sada, poštovani gospodine, uđite u parinibbānu, Srećni. Sada je vreme za konačno oslobođenje.”"
 }
