--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -665,5 +665,6 @@
   "dn16:3.36.9": "I evo sada je taj svetački život uspešan, prosperitetan i raširen, dostupan, poznat mnogima, dobro objašnjen božanskim i ljudskim bićima.",
   "dn16:3.36.10": "Uđite u parinibbānu sada, poštovani gospodine, uđite u parinibbānu, Srećni. Sada je vreme za konačno oslobođenje.’",
   "dn16:3.37.1": "Čuvši ga, ovako mu odgovorih:",
-  "dn16:3.37.2": "„Ne brini se, Zli, nije mnogo vremena ostalo do parinibbāne Blaženog."
+  "dn16:3.37.2": "„Ne brini se, Zli, nije mnogo vremena ostalo do parinibbāne Blaženog.",
+  "dn16:3.37.3": "Za tri meseca, računajući od sada, Tathāgata će ući u parinibbānu.”"
 }
