--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -654,7 +654,7 @@
   "dn16:3.35.3": "’Zli, neću ući u nibbānu sve dok moji nezaređeni sledbenici ne postanu plemeniti učenici koje su obučeni, uvežbani, vešti, učeni, znaju Dhammu napamet… Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
   "dn16:3.35.4": "’Zli, neću ući u nibbānu sve dok moje nezaređene sledbenice ne postanu plemenite učenice koje su obučene, uvežbane, vešte, učene, znaju Dhammu napamet… Dakle, sve dok nisu u stanju da podučavaju ovo čudesno učenje.’",
   "dn16:3.35.5": "’Zli, neću ući u nibbānu sve dok ovaj moj svetački život ne bude uspešan, prosperitetan i raširen, dostupan, poznat mnogima, dobro objašnjen božanskim i ljudskim bićima.’",
-  "dn16:3.36.1": "A Māra, Zli, dođe do mene i stade sa strane. Stojeći tako, reče mi:",
+  "dn16:3.36.1": "Ānanda, danas mi je kraj Ćāpāla svetilišta ponovo prišao Māra, Zli, i podsetio me na ono što sam mu ranije rekao.:",
   "dn16:3.36.2": "Uđite u parinibbānu sada, poštovani gospodine, uđite u parinibbānu, Srećni. Sada je vreme za konačno oslobođenje.",
   "dn16:3.36.3": "Naime, Blaženi je ranije ovako rekao:",
   "dn16:3.36.4": "„Zli, neću ući u nibbānu sve dok moji monasi… ne postanu plemeniti učenici…",
