Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -661,8 +661,8 @@
   "dn16:3.36.5": "sve dok moje monahinje… ne postanu plemenite učenice…",
   "dn16:3.36.6": "",
   "dn16:3.36.7": "sve dok moje nezaređene sledbenice… ne postanu plemenite učenice…",
-  "dn16:3.36.8": "sve dok ovaj moj svetački život ne bude uspešan, prosperitetan i raširen, dostupan, poznat mnogima, dobro objašnjen božanskim i ljudskim bićima.”",
-  "dn16:3.36.9": "I evo sada je taj svetački život uspešan, prosperitetan i raširen, dostupan, poznat mnogima, dobro objašnjen božanskim i ljudskim bićima.",
+  "dn16:3.36.8": "",
+  "dn16:3.36.9": "Takođe mi je rekao da su svi moji uslovi sada ispunjeni.",
   "dn16:3.36.10": "Uđite u parinibbānu sada, poštovani gospodine, uđite u parinibbānu, Srećni. Sada je vreme za konačno oslobođenje.’",
   "dn16:3.37.1": "Čuvši ga, ovako mu odgovorih:",
   "dn16:3.37.2": "„Ne brini se, Zli, nije mnogo vremena ostalo do parinibbāne Blaženog.",
