Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -668,5 +668,7 @@
   "dn16:3.37.2": "„Ne brini se, Zli, nije mnogo vremena ostalo do parinibbāne Blaženog.",
   "dn16:3.37.3": "Za tri meseca, računajući od sada, Tathāgata će ući u parinibbānu.”",
   "dn16:3.37.4": "Tako je danas, kraj Ćāpāla svetilišta Tathāgata, svestan i s jasnim razumevanjem, napustio svoj životni tok.",
-  "dn16:3.38.0": "20. Ānandina molba"
+  "dn16:3.38.0": "20. Ānandina molba",
+  "dn16:3.38.1": "Kada ovo bi izrečeno, poštovani Ānanda reče Blaženom:",
+  "dn16:3.38.2": "„Poštovani gospodine, neka Blaženi poživi čitav eon, neka Srećni poživi čitav eon, na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića!”"
 }
