--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -672,5 +672,6 @@
   "dn16:3.38.1": "Kada ovo bi izrečeno, poštovani Ānanda reče Blaženom:",
   "dn16:3.38.2": "„Poštovani gospodine, neka Blaženi poživi čitav eon, neka Srećni poživi čitav eon, na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića!”",
   "dn16:3.38.3": "„Prestani, Ānanda,",
-  "dn16:3.38.4": "ne moli Tathāgatu! Prilika za molbe je prošla!.”"
+  "dn16:3.38.4": "ne moli Tathāgatu! Prilika za molbe je prošla!”",
+  "dn16:3.39.1": "Po drugi put…"
 }
