--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -676,5 +676,6 @@
   "dn16:3.39.1": "Po drugi put…",
   "dn16:3.39.2": "Po treći put reče Blaženom:",
   "dn16:3.39.3": "„Poštovani gospodine, neka Blaženi poživi čitav eon, neka Srećni poživi čitav eon, na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića!”",
-  "dn16:3.39.4": "„Ānanda, da li ti imaš poverenje u Tathāgatino probuđenje?”"
+  "dn16:3.39.4": "„Ānanda, da li ti imaš poverenje u Tathāgatino probuđenje?”",
+  "dn16:3.39.5": "„Imam, poštovani gospodine.”"
 }
