Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -679,5 +679,7 @@
   "dn16:3.39.4": "„Ānanda, da li ti imaš poverenje u Tathāgatino probuđenje?”",
   "dn16:3.39.5": "„Imam, poštovani gospodine.”",
   "dn16:3.39.6": "„Pa zašto onda moliš Tathāgatu po treći put?”",
-  "dn16:3.40.1": "„Iz usta Blaženog sam čuo i naučio ovo:"
+  "dn16:3.40.1": "„Iz usta Blaženog sam čuo i naučio ovo:",
+  "dn16:3.40.2": "’Ko god je razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka duhovnim moćima, ukoliko poželi, može da živi pun životni vek ili još i malo duže. ",
+  "dn16:3.40.3": "Ānanda, Tathāgata je zaista razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri osnove duhovne moći. Ukoliko poželi, on može da živi čitav eon ili ono što je od njega još preostalo’.”"
 }
