--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -682,5 +682,7 @@
   "dn16:3.40.1": "„Iz usta Blaženog sam čuo i naučio ovo:",
   "dn16:3.40.2": "’Ko god je razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka duhovnim moćima, ukoliko poželi, može da živi pun životni vek ili još i malo duže. ",
   "dn16:3.40.3": "Ānanda,  Tathāgata je zaista razvijao, često vežbao, ovladao, temeljno  praktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka  duhovnim moćima. Ukoliko poželi, on može da živi pun životni vek ili još i malo duže.”",
-  "dn16:3.40.4": "„Ānanda, da li ti u to veruješ?”"
+  "dn16:3.40.4": "„Ānanda, da li ti u to veruješ?”",
+  "dn16:3.40.5": "„Verujem, poštovani gospodine.”",
+  "dn16:3.40.6": "„Upravo u tome je tvoja greška, tvoj propust, Ānanda. Uprkos tome što je Blaženi načinio tako vidljiv znak, tako vidljivu sugestiju, nisi bio u stanju da to razumeš. Tako nisi zamolio Blaženog:"
 }
