--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -684,5 +684,7 @@
   "dn16:3.40.3": "Ānanda,  Tathāgata je zaista razvijao, često vežbao, ovladao, temeljno  praktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka  duhovnim moćima. Ukoliko poželi, on može da živi pun životni vek ili još i malo duže.”",
   "dn16:3.40.4": "„Ānanda, da li ti u to veruješ?”",
   "dn16:3.40.5": "„Verujem, poštovani gospodine.”",
-  "dn16:3.40.6": "„Upravo u tome je tvoja greška, tvoj propust, Ānanda. Uprkos tome što je Blaženi načinio tako vidljiv znak, tako vidljivu sugestiju, nisi bio u stanju da to razumeš. Tako nisi zamolio Blaženog:"
+  "dn16:3.40.6": "„Upravo u tome je tvoja greška, tvoj propust, Ānanda. Uprkos tome što je Blaženi načinio tako vidljiv znak, tako vidljivu sugestiju, nisi bio u stanju da to razumeš. Tako nisi zamolio Blaženog:",
+  "dn16:3.40.7": "’Poštovani gospodine, neka Blaženi poživi čitav eon, neka Srećni poživi čitav eon, na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića!’",
+  "dn16:3.40.8": "Da si to učinio, ja bih odbio. A onda bih na treći zahtev prihvatio."
 }
