--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -688,5 +688,7 @@
   "dn16:3.40.7": "’Poštovani gospodine, neka Blaženi poživi čitav eon, neka Srećni poživi čitav eon, na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića!’",
   "dn16:3.40.8": "Da si to učinio, ja bih odbio. A onda bih na treći zahtev prihvatio.",
   "dn16:3.40.9": "Upravo u tome je tvoja greška, tvoj propust, Ānanda.",
-  "dn16:3.41.1": "Jednom sam, Ānanda, boravio kraj Rāđagahe, na Lešinarevoj hridi."
+  "dn16:3.41.1": "Jednom sam, Ānanda, boravio kraj Rāđagahe, na Lešinarevoj hridi.",
+  "dn16:3.41.2": "Tu sam ti bio rekao:",
+  "dn16:3.41.3": "’Divna je Rāđagaha, divna je Lešinareva hrid."
 }
