Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -690,5 +690,7 @@
   "dn16:3.40.9": "Upravo u tome je tvoja greška, tvoj propust, Ānanda.",
   "dn16:3.41.1": "Jednom sam, Ānanda, boravio kraj Rāđagahe, na Lešinarevoj hridi.",
   "dn16:3.41.2": "Tu sam ti bio rekao:",
-  "dn16:3.41.3": "’Divna je Rāđagaha, divna je Lešinareva hrid."
+  "dn16:3.41.3": "’Divna je Rāđagaha, divna je Lešinareva hrid.",
+  "dn16:3.41.4": "I ko god je razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka duhovnim moćima, ukoliko poželi, može da živi pun životni vek ili još i malo duže. ",
+  "dn16:3.41.5": "Ānanda,  Tathāgata je zaista razvijao, često vežbao, ovladao, temeljno  praktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka  duhovnim moćima. Ukoliko poželi, on može da živi pun životni vek ili još i malo duže.”"
 }
