--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -696,5 +696,7 @@
   "dn16:3.41.6": "Ali uprkos tome što je Blaženi načinio tako vidljiv znak, tako vidljivu sugestiju, nisi bio u stanju da to razumeš. Tako nisi zamolio Blaženog:",
   "dn16:3.41.7": "’Poštovani gospodine, neka Blaženi poživi čitav eon, neka Srećni poživi čitav eon, na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića!’",
   "dn16:3.41.8": "Da si to učinio, ja bih odbio. A onda bih na treći zahtev prihvatio.",
-  "dn16:3.41.9": "Upravo u tome je tvoja greška, tvoj propust, Ānanda."
+  "dn16:3.41.9": "Upravo u tome je tvoja greška, tvoj propust, Ānanda.",
+  "dn16:3.42.1": "Jednom sam, Ānanda, boravio kraj Rāđagahe, kraj Gotaminog banjanovog drveta…",
+  "dn16:3.42.2": "na Razbojničkoj steni…"
 }
