Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -698,5 +698,7 @@
   "dn16:3.41.8": "Da si to učinio, ja bih odbio. A onda bih na treći zahtev prihvatio.",
   "dn16:3.41.9": "Upravo u tome je tvoja greška, tvoj propust, Ānanda.",
   "dn16:3.42.1": "Jednom sam, Ānanda, boravio kraj Rāđagahe, kraj Gotaminog banjanovog drveta…",
-  "dn16:3.42.2": "na Razbojničkoj steni…"
+  "dn16:3.42.2": "na Razbojničkoj steni…",
+  "dn16:3.42.3": "u Sattapaṇṇi pećini na obroncima Vebhāre…",
+  "dn16:3.42.4": "na Crnoj steni Isigili brda…"
 }
