Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -700,5 +700,7 @@
   "dn16:3.42.1": "Jednom sam, Ānanda, boravio kraj Rāđagahe, kraj Gotaminog banjanovog drveta…",
   "dn16:3.42.2": "na Razbojničkoj steni…",
   "dn16:3.42.3": "u Sattapaṇṇi pećini na obroncima Vebhāre…",
-  "dn16:3.42.4": "na Crnoj steni Isigili brda…"
+  "dn16:3.42.4": "na Crnoj steni Isigili brda…",
+  "dn16:3.42.5": "u senovitoj šumi kod Zmijske pećine…",
+  "dn16:3.42.6": "u manastiru sa toplim izvorima…"
 }
