Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -702,5 +702,7 @@
   "dn16:3.42.3": "u Sattapaṇṇi pećini na obroncima Vebhāre…",
   "dn16:3.42.4": "na Crnoj steni Isigili brda…",
   "dn16:3.42.5": "u senovitoj šumi kod Zmijske pećine…",
-  "dn16:3.42.6": "u manastiru sa toplim izvorima…"
+  "dn16:3.42.6": "u manastiru sa toplim izvorima…",
+  "dn16:3.42.7": "u Bambusovom gaju, na mestu gde se hrane veverice…",
+  "dn16:3.42.8": "u Đivakovom mango gaju…"
 }
