Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -704,5 +704,7 @@
   "dn16:3.42.5": "u senovitoj šumi kod Zmijske pećine…",
   "dn16:3.42.6": "u manastiru sa toplim izvorima…",
   "dn16:3.42.7": "u Bambusovom gaju, na mestu gde se hrane veverice…",
-  "dn16:3.42.8": "u Đivakovom mango gaju…"
+  "dn16:3.42.8": "u Đivakovom mango gaju…",
+  "dn16:3.42.9": "Madakuććhi parku jelena.",
+  "dn16:3.43.1": "Tu sam ti bio rekao:"
 }
