Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -706,5 +706,7 @@
   "dn16:3.42.7": "u Bambusovom gaju, na mestu gde se hrane veverice…",
   "dn16:3.42.8": "u Đivakovom mango gaju…",
   "dn16:3.42.9": "Madakuććhi parku jelena.",
-  "dn16:3.43.1": "Tu sam ti bio rekao:"
+  "dn16:3.43.1": "Tu sam ti bio rekao:",
+  "dn16:3.43.2": "’Divna je Rāđagaha, divan je Madakuććhi park jelena…",
+  "dn16:3.44.1": "I ko god je razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka duhovnim moćima…"
 }
