Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -710,5 +710,6 @@
   "dn16:3.43.2": "’Divna je Rāđagaha, divan je Madakuććhi park jelena…",
   "dn16:3.44.1": "I ko god je razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka duhovnim moćima…",
   "dn16:3.44.2": "Ukoliko poželi, Tathāgata može da živi pun životni vek ili još i malo duže.”",
-  "dn16:3.44.3": "Ali uprkos tome što je Blaženi načinio tako vidljiv znak, tako vidljivu sugestiju, nisi bio u stanju da to razumeš. "
+  "dn16:3.44.3": "Ali uprkos tome što je Blaženi načinio tako vidljiv znak, tako vidljivu sugestiju, nisi bio u stanju da to razumeš. ",
+  "dn16:3.44.4": "Tako nisi zamolio Tathāgatu da poživi čitav eon."
 }
