--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -711,5 +711,7 @@
   "dn16:3.44.1": "I ko god je razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka duhovnim moćima…",
   "dn16:3.44.2": "Ukoliko poželi, Tathāgata može da živi pun životni vek ili još i malo duže.”",
   "dn16:3.44.3": "Ali uprkos tome što je Blaženi načinio tako vidljiv znak, tako vidljivu sugestiju, nisi bio u stanju da to razumeš. ",
-  "dn16:3.44.4": "Tako nisi zamolio Tathāgatu da poživi čitav eon."
+  "dn16:3.44.4": "Tako nisi zamolio Tathāgatu da poživi čitav eon.",
+  "dn16:3.44.5": "Da si to učinio, ja bih odbio. A onda bih na treći zahtev prihvatio.",
+  "dn16:3.44.6": "Upravo u tome je tvoja greška, tvoj propust, Ānanda."
 }
