Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -713,5 +713,6 @@
   "dn16:3.44.3": "Ali uprkos tome što je Blaženi načinio tako vidljiv znak, tako vidljivu sugestiju, nisi bio u stanju da to razumeš. ",
   "dn16:3.44.4": "Tako nisi zamolio Tathāgatu da poživi čitav eon.",
   "dn16:3.44.5": "Da si to učinio, ja bih odbio. A onda bih na treći zahtev prihvatio.",
-  "dn16:3.44.6": "Upravo u tome je tvoja greška, tvoj propust, Ānanda."
+  "dn16:3.44.6": "Upravo u tome je tvoja greška, tvoj propust, Ānanda.",
+  "dn16:3.45.1": "Tako sam jednom živeo kraj Rāđagahe, kod svetilišta kralja Udene…"
 }
