Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -714,5 +714,7 @@
   "dn16:3.44.4": "Tako nisi zamolio Tathāgatu da poživi čitav eon.",
   "dn16:3.44.5": "Da si to učinio, ja bih odbio. A onda bih na treći zahtev prihvatio.",
   "dn16:3.44.6": "Upravo u tome je tvoja greška, tvoj propust, Ānanda.",
-  "dn16:3.45.1": "Tako sam jednom živeo kraj Rāđagahe, kod svetilišta kralja Udene…"
+  "dn16:3.45.1": "Tako sam jednom živeo kraj Rāđagahe, kod svetilišta kralja Udene…",
+  "dn16:3.46.2": "kraj Sattamba svetilišta…",
+  "dn16:3.46.3": "svetilišta za nerotkinje…"
 }
