Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -716,5 +716,7 @@
   "dn16:3.44.6": "Upravo u tome je tvoja greška, tvoj propust, Ānanda.",
   "dn16:3.45.1": "Tako sam jednom živeo kraj Rāđagahe, kod svetilišta kralja Udene…",
   "dn16:3.46.2": "kraj Sattamba svetilišta…",
-  "dn16:3.46.3": "svetilišta za nerotkinje…"
+  "dn16:3.46.3": "svetilišta za nerotkinje…",
+  "dn16:3.46.4": "kraj Sārandade svetilišta…",
+  "dn16:3.47.1": "i sada kraj Ćāpāla svetilišta. I tu sam ti rekao:"
 }
