Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -718,5 +718,6 @@
   "dn16:3.46.2": "kraj Sattamba svetilišta…",
   "dn16:3.46.3": "svetilišta za nerotkinje…",
   "dn16:3.46.4": "kraj Sārandade svetilišta…",
-  "dn16:3.47.1": "i sada kraj Ćāpāla svetilišta. I tu sam ti rekao:"
+  "dn16:3.47.1": "i sada kraj Ćāpāla svetilišta. I tu sam ti rekao:",
+  "dn16:3.47.2": "„Ānanda, divan je Vesāli, divno je svetilište kralja Udene, divno je Gotamaka svetilište, divno je Sattamba svetilište, divno je Bahuputta svetilište, divno je Sārandada svetilište, divno je Ćāpāla svetilište."
 }
