--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -720,5 +720,6 @@
   "dn16:3.46.4": "kraj Sārandade svetilišta…",
   "dn16:3.47.1": "i sada kraj Ćāpāla svetilišta. I tu sam ti rekao:",
   "dn16:3.47.2": "„Ānanda, divan je Vesāli, divno je svetilište kralja Udene, divno je Gotamaka svetilište, divno je Sattamba svetilište, divno je Bahuputta svetilište, divno je Sārandada svetilište, divno je Ćāpāla svetilište.",
-  "dn16:3.47.3": "I ko god je razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka duhovnim moćima, ukoliko poželi, može da živi pun životni vek ili još i malo duže. "
+  "dn16:3.47.3": "I ko god je razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka duhovnim moćima, ukoliko poželi, može da živi pun životni vek ili još i malo duže. ",
+  "dn16:3.47.4": "Ānanda, Tathāgata je zaista razvijao, često vežbao, ovladao, temeljno  praktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka  duhovnim moćima. Ukoliko poželi, on može da živi pun životni vek ili još i malo duže.”"
 }
