--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -724,5 +724,7 @@
   "dn16:3.47.4": "Ānanda, Tathāgata je zaista razvijao, često vežbao, ovladao, temeljno  praktikovao, održavao, uvećavao i na pravi način koristio četiri puta ka  duhovnim moćima. Ukoliko poželi, on može da živi pun životni vek ili još i malo duže.”",
   "dn16:3.47.5": "Ali uprkos tome što je Blaženi načinio tako vidljiv znak, tako vidljivu sugestiju, nisi bio u stanju da to razumeš. Tako nisi zamolio Tathāgatu:",
   "dn16:3.47.6": "Tako nisi zamolio Tathāgatu da poživi čitav eon.",
-  "dn16:3.47.7": "Da si to učinio, ja bih odbio. A onda bih na treći zahtev prihvatio."
+  "dn16:3.47.7": "Da si to učinio, ja bih odbio. A onda bih na treći zahtev prihvatio.",
+  "dn16:3.47.8": "Upravo u tome je tvoja greška, tvoj propust, Ānanda.",
+  "dn16:3.48.1": "No, nisam li ja to već ranije govorio:"
 }
