--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -726,5 +726,7 @@
   "dn16:3.47.6": "Tako nisi zamolio Tathāgatu da poživi čitav eon.",
   "dn16:3.47.7": "Da si to učinio, ja bih odbio. A onda bih na treći zahtev prihvatio.",
   "dn16:3.47.8": "Upravo u tome je tvoja greška, tvoj propust, Ānanda.",
-  "dn16:3.48.1": "No, nisam li ja to već ranije govorio:"
+  "dn16:3.48.1": "No, nisam li ja to već ranije govorio:",
+  "dn16:3.48.2": "’U svemu što je drago i blisko postoji razdvajanje, postoji napuštanje.",
+  "dn16:3.48.3": "Gde je to moguće naći da nešto što je rođeno, nastalo, uslovljeno, po svojoj prirodi nestabilno, da tako nešto ne propadne? To ne postoji.’"
 }
