--- a/translation/de/site/name/sutta/an-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/an-name_translation-de-site.json
@@ -86,9 +86,9 @@
   "an-name:85.an2-samapattivagga": "Das Kapitel über erhabene Zustände ",
   "an-name:86.an2.163-179": "Erhabene Zustände ",
   "an-name:87.an2-peyyala": "Abgekürzte Texte ",
-  "an-name:88.an2-kodhapeyyalavagga": "Das Kapitel mit abgekürzten Texten, die mit Zorn beginnen ",
+  "an-name:88.an2-kodhapeyyalavagga": "Das Kapitel der abgekürzten Texte, die mit Zorn beginnen ",
   "an-name:89.an2.180-229": "Abgekürzte Texte, die mit Zorn beginnen ",
-  "an-name:90.an2-akusalapeyyalavagga": "Das Kapitel mit abgekürzten Texten, die mit untauglich beginnen ",
+  "an-name:90.an2-akusalapeyyalavagga": "Das Kapitel der abgekürzten Texte, die mit untauglich beginnen ",
   "an-name:91.an2.230-279": "Abgekürzte Texte, die mit untauglich beginnen ",
   "an-name:92.an2-vinayapeyyalavagga": "Das Kapitel mit abgekürzten Texten über das Ordensrecht ",
   "an-name:93.an2.280-309": "Abgekürzte Texte über das Ordensrecht ",
