--- a/translation/de/site/name/sutta/an-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/an-name_translation-de-site.json
@@ -90,9 +90,9 @@
   "an-name:89.an2.180-229": "Abgekürzte Texte, die mit Zorn beginnen ",
   "an-name:90.an2-akusalapeyyalavagga": "Das Kapitel der abgekürzten Texte, die mit untauglich beginnen ",
   "an-name:91.an2.230-279": "Abgekürzte Texte, die mit untauglich beginnen ",
-  "an-name:92.an2-vinayapeyyalavagga": "Das Kapitel mit abgekürzten Texten über das Ordensrecht ",
+  "an-name:92.an2-vinayapeyyalavagga": "Das Kapitel der abgekürzten Texte über das Ordensrecht ",
   "an-name:93.an2.280-309": "Abgekürzte Texte über das Ordensrecht ",
-  "an-name:94.an2-ragapeyyalavagga": "Das Kapitel mit abgekürzten Texten, die mit Gier beginnen ",
+  "an-name:94.an2-ragapeyyalavagga": "Das Kapitel der abgekürzten Texte, die mit Gier beginnen ",
   "an-name:95.an2.310-479": "Abgekürzte Texte, die mit Gier beginnen ",
   "an-name:96.an3": "Das Dreierbuch ",
   "an-name:97.an3-pathamapannasaka": "Die ersten Fünfzig ",
