Translations by sabbamitta to translation/de/site/name/sutta/an-name_translation-de-site.json

--- a/translation/de/site/name/sutta/an-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/an-name_translation-de-site.json
@@ -272,7 +272,7 @@
   "an-name:271.an3.156-162": "Das Kapitel über Nacktheit ",
   "an-name:272.an3-kammapathapeyyavagga": "Das Kapitel über Wege zum Begehen von Taten ",
   "an-name:273.an3.163-182": "Wege zum Begehen von Taten ",
-  "an-name:274.an3-ragadipeyyalavagga": "Das Kapitel mit abgekürzten Texten, die mit Gier beginnen ",
+  "an-name:274.an3-ragadipeyyalavagga": "Das Kapitel der abgekürzten Texte, die mit Gier beginnen ",
   "an-name:275.an3.183-352": "Abgekürzte Texte, die mit Gier beginnen ",
   "an-name:276.an4": "Das Viererbuch ",
   "an-name:277.an4-pathamapannasaka": "Die ersten Fünfzig ",
