--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -326,7 +326,7 @@
   "ja-name:325.ja292": "Schönflügel der Krähenkönig ",
   "ja-name:326.ja293": "Schwinden der Leidenschaft für den Körper ",
   "ja-name:327.ja294": "Die Krähe, die vom Rosenapfel aß ",
-  "ja-name:328.ja295": "Das Schlimmste ",
+  "ja-name:328.ja295": "Die Schlechtesten ",
   "ja-name:329.ja296": "Meerwasser trinken ",
   "ja-name:330.ja297": "Eine Liebesklage ",
   "ja-name:331.ja298": "Die Feigen sind reif ",
