Translations by gnlaera to translation/pt/blurb/an-blurbs_translation-pt.json

--- a/translation/pt/blurb/an-blurbs_translation-pt.json
+++ b/translation/pt/blurb/an-blurbs_translation-pt.json
@@ -1194,5 +1194,6 @@
   "an-blurbs:an10.219": "A prática da libertação do coração baseada no bem-querer, na alegria altruísta, na compaixão e na  equanimidade resultam no não-retorno.",
   "an-blurbs:an10.220": "Dez qualidades relativas aos preceitos que destinam um indivíduo para o inferno ou para os reinos celestiais.",
   "an-blurbs:an11.1": "Dez qualidades relativas aos preceitos que destinam um indivíduo para o inferno ou para os reinos celestiais.",
-  "an-blurbs:an11.2": "Onze elos de causação natural e impessoal, baseados na conduta ética, que resultam no conhecimento e visão da libertação espiritual. "
+  "an-blurbs:an11.2": "Onze elos de causação natural e impessoal, baseados na conduta ética, que resultam no conhecimento e visão da libertação espiritual. ",
+  "an-blurbs:an11.3": "Onze elos de causação natural e impessoal, baseados na conduta ética, que resultam no conhecimento e visão da libertação espiritual. "
 }
