Translations by gnlaera to translation/pt/blurb/an-blurbs_translation-pt.json

--- a/translation/pt/blurb/an-blurbs_translation-pt.json
+++ b/translation/pt/blurb/an-blurbs_translation-pt.json
@@ -1196,5 +1196,5 @@
   "an-blurbs:an11.1": "Dez qualidades relativas aos preceitos que destinam um indivíduo para o inferno ou para os reinos celestiais.",
   "an-blurbs:an11.2": "Onze elos de causação natural e impessoal, baseados na conduta ética, que resultam no conhecimento e visão da libertação espiritual. ",
   "an-blurbs:an11.3": "Onze elos de causação natural e impessoal, baseados na conduta ética, que resultam no conhecimento e visão da libertação espiritual. ",
-  "an-blurbs:an11.4": "Onze elos de causação natural e impessoal, baseados na conduta ética, que resultam no conhecimento e visão da libertação espiritual. "
+  "an-blurbs:an11.4": "O Venerável Sāriputta ensina sobre os onze elos de causação natural e impessoal, baseados na conduta ética, que resultam no conhecimento e visão da libertação espiritual. "
 }
