Translations by gnlaera to translation/pt/blurb/an-blurbs_translation-pt.json

--- a/translation/pt/blurb/an-blurbs_translation-pt.json
+++ b/translation/pt/blurb/an-blurbs_translation-pt.json
@@ -1203,5 +1203,5 @@
   "an-blurbs:an11.8": "O venerável Ānanda questiona o Buda sobre um estado de imersão meditativa no qual, apesar de os quatro elementos e as cinco dimensões de absorção meditativa não serem percebidos, um bhikkhu ainda permanece perceptivo. O Buda confirma a existência de tal estado meditativo.",
   "an-blurbs:an11.9": "O Buda exorta o venerável Sandha a meditar como um cavalo puro-sangue, não como um potro selvagem.",
   "an-blurbs:an11.10": "Onze qualidades presentes naqueles que alcançaram o objetivo final, o santuário supremo, e viveram a vida espiritual completamente.",
-  "an-blurbs:an11.11": "O Buda ensina Mahānāma, o Sákya, sobre qualidades que servem de base para o cultivo e desenvolvimento de outras seis qualidades"
+  "an-blurbs:an11.11": "O Buda ensina Mahānāma, o Sákya, sobre qualidades que servem de base para o cultivo e desenvolvimento de outras seis reflexões que conduzem à felicidade e imersão da mente em samādhi."
 }
