Translations by gnlaera to translation/pt/blurb/an-blurbs_translation-pt.json

--- a/translation/pt/blurb/an-blurbs_translation-pt.json
+++ b/translation/pt/blurb/an-blurbs_translation-pt.json
@@ -1209,5 +1209,6 @@
   "an-blurbs:an11.14": "Onze resultados ou desdobramentos da fé e convicção no Buda e seu ensinamento e disciplina.",
   "an-blurbs:an11.15": "Onze benefícios a serem esperados por aqueles que praticam, desenvolvem e se estabelecem na prática do bem querer.",
   "an-blurbs:an11.16": "Quando solicitado por um chefe de família a ensinar um caminho para a liberdade, Venerável Ananda explica nada menos que onze estados meditativos que podem servir como portas para o imortal.",
-  "an-blurbs:an11.17": "Por onze razões, um vaqueiro é capaz de cuidar adequadamente de um rebanho. O Buda compara isso ao progresso espiritual de um discípulo mendicante."
+  "an-blurbs:an11.17": "Por onze razões, um vaqueiro é capaz de cuidar adequadamente de um rebanho. O Buda compara isso ao progresso espiritual de um discípulo mendicante.",
+  "an-blurbs:an11.18": "O Buda é questionado sobre um estado de imersão meditativa no qual, apesar de os quatro elementos e as cinco dimensões de absorção meditativa não serem percebidos, um bhikkhu ainda permanece perceptivo. O Buda confirma a existência de tal estado meditativo."
 }
